# fault_injection_simulation

./: .gitignore  README.md  fault_config.yaml  network_delay.yaml  noise_config.yaml  pipeline.sh  spike_config.yaml
src/failure_monitor/: package.xml
src/failure_monitor/scripts/: failure_monitor
src/franka_ros-0.9.1/franka_gazebo/launch/: panda.launch
src/joint_state_publisher/joint_state_publisher/: package.xml
src/joint_state_publisher/joint_state_publisher/msg/: RecorderMsg.msg
src/joint_state_publisher/joint_state_publisher/scripts/: action_publisher  delayed_joint_state_publisher  fault_injector  joint_state_publisher  recorder  stuck_joint8_state_publisher
src/joint_state_publisher/joint_state_publisher/src/joint_state_publisher/: __init__.py
src/moveit/moveit/: .gitignore
src/moveit/moveit_tutorials/: .gitignore
src/panda_gazebo/cfg/controllers/: moveit_ros_control.yaml  position_joint_trajectory_controllers.yaml
src/panda_gazebo/launch/: load_controllers.launch.xml  load_position_joint_trajectory_controllers.launch.xml  put_robot_in_world.launch  start_pick_and_place_world.launch  start_simulation.launch
src/panda_gazebo/launch/includes/rviz/: panda_moveit.rviz
src/panda_gazebo/resources/worlds/: empty.world  pick_and_place.world  pick_and_place2.world  pick_and_place3.world  pick_and_place4 copy.world  pick_and_place4.world
src/panda_gazebo/scripts/: set_franka_gripper_logging_level.py
src/panda_moveit_config-0.8.1/launch/: move_group.launch
src/random_position_generator/: package.xml
src/random_position_generator/scripts/: random_position.py
(+20 files in other folders)
